syntax = "proto3";

package user;

service UserService {
    rpc Create(User) returns (Response) {}
    rpc GetByID(User) returns (Response) {}
    rpc GetAll(Request) returns (Response) {}
    rpc Auth(User) returns (TokenInfo) {}
    rpc ValidateToken(TokenInfo) returns (TokenInfo) {}
}

message User {
    string id = 1;
    string name = 2;
    string company = 3;
    string email = 4;
    string password = 5;
}

message Response {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
    TokenInfo token = 4;
}

message Request {}

message TokenInfo {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}